--- a/dagster/Dockerfile
+++ b/dagster/Dockerfile
@@ -4,6 +4,7 @@ FROM python:3.12-slim
 RUN apt-get update && apt-get install -y \
     build-essential \
     python3-dev \
+     docker.io \
     && rm -rf /var/lib/apt/lists/*
 
 # Install poetry
