--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,49 +2,81 @@
 name = "mlflow-poc"
 version = "0.1.0"
 description = "POC for local MLFlow"
-authors = [
-    {name = "Your Name",email = "you@example.com"}
-]
-package-mode = false
+authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.13"
+
 dependencies = [
-    "pandas (>=2.2.3,<3.0.0)",
-    "mlflow (>=2.22.0,<3.0.0)",
-    "boto3 (>=1.38.13,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)",
-    "click (>=8.1.8,<9.0.0)",
-    "jupyter (>=1.1.1,<2.0.0)",
-    "ipykernel (>=6.29.5,<7.0.0)",
-    "jupytext (>=1.17.1,<2.0.0)",
-    "mlserver (>=1.7.0,<2.0.0)",
-    "mlserver-mlflow (>=1.7.0,<2.0.0)",
-    "nbstripout (>=0.8.1,<0.9.0)",
-    "pre-commit (>=4.2.0,<5.0.0)",
-    "flake8 (>=7.2.0,<8.0.0)",
-    "nbqa (>=1.9.1,<2.0.0)",
-    "scrapbook[all] (>=0.5.0,<0.6.0)",
+    "boto3==1.38.23",
+    "ipykernel==6.29.5",
+    "jupyter==1.1.1",
+    "jupytext==1.17.1",
+    "mlflow==2.22.0",
+    "mlserver==1.7.0",
+    "mlserver-mlflow==1.7.0",
+    "pandas==2.2.3",
+    "psycopg2-binary==2.9.10",
+    "scikit-learn==1.6.1",
+    "scrapbook[all]==0.5.0",
+]
+
+[dependency-groups]
+dagster = [
+    "dagster==1.10.17",
+    "dagster-aws==0.26.17",
+    "dagster-cloud==1.10.17",
+    "dagster-docker==0.26.17",
+    "dagster-graphql==1.10.17",
+    "dagster-msteams==0.26.17",
+    "dagster-postgres==0.26.17",
+    "dagster-webserver==1.10.17",
+    "papermill==2.6.0",
+]
+dev = [
+    "pre-commit==4.2.0",
+    "ruff==0.11.11",
+    "nbstripout==0.8.1",
+    "nbqa==1.9.1",
+    "uv==0.7.8",
+]
+
+[tool.uv]
+default-groups = [
+    "dagster",
+    "dev",
 ]
 
 
-[tool.poetry.group.dagster.dependencies]
-dagster = "1.10.7"
-dagster-aws = "0.26.7"
-dagster-cloud = "1.10.7"
-dagster-graphql = "1.10.7"
-dagster-postgres = "0.26.7"
-dagster-webserver = "1.10.7"
-dagster-msteams = "0.26.7"
-dagster-docker = "0.26.7"
-papermill = "2.6.0"
+[tool.ruff]
+line-length = 120
 
+[tool.ruff.lint]
+# Enable all available rules
+select = ["B", "E", "F", "G", "I", "I", "N", "PL", "RUF", "UP", "W", ]
+extend-ignore = [
+    # Disable entire categories
+    "D",   # All pydocstyle rules
+    "G",   # All naming conventions
+]
+ignore = [
+    "D203",  # Incompatible with D211 (blank lines around classes)
+    "D212",  # Incompatible with D213 (docstring formatting)
+    "COM812", # Conflicts with formatter (trailing comma detection)
+    "TRY301",
+    "PLR2004",
+    "S113",
+    "ANN001",
+    "EM102",
+    "S108",
+    "D401",
+]
 
-[tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = "^25.1.0"}
+[tool.ruff.lint.isort]
+known-third-party = ["mlflow_poc"]
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+# OR per-file ignores
+[tool.ruff.lint.per-file-ignores]
+"src/notebooks/*.py" = ["ERA001", "E402", "B018", "T201", "E501", "D100", "N999"]
 
-[tool.isort]
-profile = "black"
+[tool.ruff.format]
+quote-style = "double"
+line-ending = "lf"
