--- a/docker-compose.model-server.yaml
+++ b/docker-compose.model-server.yaml
@@ -40,10 +40,10 @@ services:
       AWS_ACCESS_KEY_ID: "admin"
       AWS_SECRET_ACCESS_KEY: "admin123"
       MLFLOW_S3_ENDPOINT_URL: "http://minio:9000"
-      #BACKEND_URI: "postgresql://mlflow:mlflow_pass@postgres:5432"
+      BACKEND_URI: "postgresql://mlflow:mlflow_pass@postgres:5432"
       MLFLOW_TRACKING_URI: "http://mlflow:5000"
       MODEL_URI: "models:/diabetes-model@dev"
-      #ARTIFACT_ROOT: "s3://mlflow-artifacts/"
+      ARTIFACT_ROOT: "s3://mlflow-artifacts/"
     depends_on:
       postgres:
         condition: service_started
